# Rust-task1

./: Cargo.toml  README.md  config.json
face_detection_pipeline/: Cargo.toml
face_detection_pipeline/src/: main.rs
