[package]
name = "face-cropper"
version = "0.1.0"
edition = "2021"
authors = ["AI Assistant"]
description = "A tool for detecting and cropping faces from images using YOLOv8"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.10"
image = "0.24"
log = "0.4"
rayon = "1.8"
humantime = "2.1"
indicatif = "0.17"
num_cpus = "1.16"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
