[package]
name = "face_detection_pipeline"
version = "0.1.0"
edition = "2021"
authors = ["Paritosh"]
description = "A face detection and cropping pipeline using YOLOv8-face"

[dependencies]
tch = "0.10.3"        
image = "0.24.6"      
anyhow = "1.0.71"     
rayon = "1.7.0"       
clap = "3.2.25"       
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96" 
indicatif = "0.17.3"  
thiserror = "1.0.40"  